--- a/reports.html
+++ b/reports.html
@@ -132,7 +132,7 @@
         <!-- Logo -->
         <a
             class="navbar-brand m-0"
-            href="/index.html"
+            href="//deployment/index.html"
         >
             <img
                 src="images/ncim.png"
@@ -163,13 +163,13 @@
                     <a
                         class="nav-link active"
                         aria-current="page"
-                        href="/index.html"
+                        href="//deployment/index.html"
                     >الرئيسية</a>
                 </li>
                 <li class="nav-item dropdown position-static">
                     <a
                         class="nav-link gap-2"
-                        href="/about.html"
+                        href="//deployment/about.html"
                         id="navbarDropdown"
                         role="button"
                         data-bs-toggle="dropdown"
@@ -187,14 +187,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">عن المركز</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/about.html"
+                                        href="//deployment/about.html"
                                     >
                                         <img src="images/icons/check.svg">
                                         <span>نبذة عن المركز</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/structure.html"
+                                        href="//deployment/structure.html"
                                     >
                                         <img src="images/icons/stucture.svg">
                                         <span>الهيكل التنظيمي</span>
@@ -204,14 +204,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">من نخدم</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/owners-and-individuals.html"
+                                        href="//deployment/owners-and-individuals.html"
                                     >
                                         <img src="images/icons/bussiness.svg">
                                         <span>أصحاب العمل والأفراد</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/gov.html"
+                                        href="//deployment/gov.html"
                                     >
                                         <img src="images/icons/gov.svg">
                                         <span>الجهات الحكومية والمنفذة</span>
@@ -221,14 +221,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">الأنظمة والمصطلحات</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/rules-and-regulations.html"
+                                        href="//deployment/rules-and-regulations.html"
                                     >
                                         <img src="images/icons/ins.svg">
                                         <span>الأنظمة واللوائح</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/terminology.html"
+                                        href="//deployment/terminology.html"
                                     >
                                         <img src="images/icons/dictionary.svg">
                                         <span>المصطلحات</span>
@@ -238,21 +238,21 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">الشفافية والحوكمة</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/reports.html"
+                                        href="//deployment/reports.html"
                                     >
                                         <img src="images/icons/chart.svg">
                                         <span>التقارير السنوية</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/privacy.html"
+                                        href="//deployment/privacy.html"
                                     >
                                         <img src="images/icons/policy.svg">
                                         <span>سياسة الخصوصية</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/freedom.html"
+                                        href="//deployment/freedom.html"
                                     >
                                         <img src="images/icons/freedom.svg">
                                         <span>حرية الحصول على المعلومات</span>
@@ -265,37 +265,37 @@
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/news.html"
+                        href="//deployment/news.html"
                     >الأخبار والأحداث</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/services.html"
+                        href="//deployment/services.html"
                     >الخدمات</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/support.html"
+                        href="//deployment/support.html"
                     >المساعدة والدعم</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/contact-us.html"
+                        href="//deployment/contact-us.html"
                     >تواصل معنا</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/faq.html"
+                        href="//deployment/faq.html"
                     >الأسئلة الشائعة</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/site-map.html"
+                        href="//deployment/site-map.html"
                     >خريطة الموقع</a>
                 </li>
             </ul>
@@ -305,7 +305,7 @@
                 <a
                     class="btn border-0"
                     role="button"
-                    href="/map.html"
+                    href="//deployment/map.html"
                 >
                     <img src="images/icons/search.svg">
                 </a>
@@ -387,7 +387,7 @@
                 <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/index.html"
+                    href="//deployment/index.html"
                 >الرئيسية</a>
             </li>
 
@@ -395,7 +395,7 @@
             <li class="nav-item dropdown">
                 <a
                     class="nav-link d-flex justify-content-between align-items-center"
-                    href="/about.html"
+                    href="//deployment/about.html"
                     id="mobileDropdown"
                     role="button"
                     data-bs-toggle="dropdown"
@@ -413,7 +413,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/about.html"
+                            href="//deployment/about.html"
                         >
                             <img
                                 src="images/icons/check.svg"
@@ -423,7 +423,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/structure.html"
+                            href="//deployment/structure.html"
                         >
                             <img
                                 src="images/icons/stucture.svg"
@@ -440,7 +440,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/owners-and-individuals.html"
+                            href="//deployment/owners-and-individuals.html"
                         >
                             <img
                                 src="images/icons/bussiness.svg"
@@ -450,7 +450,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/gov.html"
+                            href="//deployment/gov.html"
                         >
                             <img
                                 src="images/icons/gov.svg"
@@ -467,7 +467,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/rules-and-regulations.html"
+                            href="//deployment/rules-and-regulations.html"
                         >
                             <img
                                 src="images/icons/ins.svg"
@@ -477,7 +477,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/terminology.html"
+                            href="//deployment/terminology.html"
                         >
                             <img
                                 src="images/icons/dictionary.svg"
@@ -494,7 +494,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/reports.html"
+                            href="//deployment/reports.html"
                         >
                             <img
                                 src="images/icons/chart.svg"
@@ -504,7 +504,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/privacy.html"
+                            href="//deployment/privacy.html"
                         >
                             <img
                                 src="images/icons/policy.svg"
@@ -514,7 +514,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/freedom.html"
+                            href="//deployment/freedom.html"
                         >
                             <img
                                 src="images/icons/freedom.svg"
@@ -528,37 +528,37 @@
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/news.html"
+                    href="//deployment/news.html"
                 >الأخبار والأحداث</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/services.html"
+                    href="//deployment/services.html"
                 >الخدمات</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/support.html"
+                    href="//deployment/support.html"
                 >المساعدة والدعم</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/contact-us.html"
+                    href="//deployment/contact-us.html"
                 >تواصل معنا</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/faq.html"
+                    href="//deployment/faq.html"
                 >الأسئلة الشائعة</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/site-map.html"
+                    href="//deployment/site-map.html"
                 >خريطة الموقع</a>
             </li>
 
@@ -618,13 +618,13 @@
                     <li
                     class="breadcrumb-item"
                 >
-                    <a href="/">عن المركز</a>
+                    <a href="//deployment/">عن المركز</a>
                     </li>
                     
                     <li
                     class="breadcrumb-item"
                 >
-                    <a href="/reports.html">التقارير السنوية</a>
+                    <a href="//deployment/reports.html">التقارير السنوية</a>
                     </li>
                     
             </ol>
@@ -928,32 +928,32 @@
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
                             aria-current="page"
-                            href="/about.html"
+                            href="//deployment/about.html"
                         >نبذة عن المركز</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/news.html"
+                            href="//deployment/news.html"
                         >الأخبار والأحداث</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/service.html"
+                            href="//deployment/service.html"
                         >الخدمات</a>
                     </li>
 
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/terminology.html"
+                            href="//deployment/terminology.html"
                         >المصطلحات</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/site-map.html"
+                            href="//deployment/site-map.html"
                         >خريطة الموقع</a>
                     </li>
 
@@ -973,13 +973,13 @@
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/support.html"
+                            href="//deployment/support.html"
                         >بلاغ عن فساد</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/contact-us.html"
+                            href="//deployment/contact-us.html"
                         >تواصل معنا</a>
                     </li>
                 </ul>
@@ -1122,20 +1122,20 @@
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/terms.html"
+                    href="//deployment/terms.html"
                 >الشروط والأحكام</a>
             </li>
 
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/privacy.html"
+                    href="//deployment/privacy.html"
                 >سياسة الخصوصية</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/freedom.html"
+                    href="//deployment/freedom.html"
                 >حرية الحصول على المعلومات</a>
             </li>
         </ul>
