--- a/service-details.html
+++ b/service-details.html
@@ -145,7 +145,7 @@
         <!-- Logo -->
         <a
             class="navbar-brand m-0"
-            href="/index.html"
+            href="//deployment/index.html"
         >
             <img
                 src="images/ncim.png"
@@ -176,13 +176,13 @@
                     <a
                         class="nav-link active"
                         aria-current="page"
-                        href="/index.html"
+                        href="//deployment/index.html"
                     >الرئيسية</a>
                 </li>
                 <li class="nav-item dropdown position-static">
                     <a
                         class="nav-link gap-2"
-                        href="/about.html"
+                        href="//deployment/about.html"
                         id="navbarDropdown"
                         role="button"
                         data-bs-toggle="dropdown"
@@ -200,14 +200,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">عن المركز</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/about.html"
+                                        href="//deployment/about.html"
                                     >
                                         <img src="images/icons/check.svg">
                                         <span>نبذة عن المركز</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/structure.html"
+                                        href="//deployment/structure.html"
                                     >
                                         <img src="images/icons/stucture.svg">
                                         <span>الهيكل التنظيمي</span>
@@ -217,14 +217,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">من نخدم</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/owners-and-individuals.html"
+                                        href="//deployment/owners-and-individuals.html"
                                     >
                                         <img src="images/icons/bussiness.svg">
                                         <span>أصحاب العمل والأفراد</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/gov.html"
+                                        href="//deployment/gov.html"
                                     >
                                         <img src="images/icons/gov.svg">
                                         <span>الجهات الحكومية والمنفذة</span>
@@ -234,14 +234,14 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">الأنظمة والمصطلحات</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/rules-and-regulations.html"
+                                        href="//deployment/rules-and-regulations.html"
                                     >
                                         <img src="images/icons/ins.svg">
                                         <span>الأنظمة واللوائح</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/terminology.html"
+                                        href="//deployment/terminology.html"
                                     >
                                         <img src="images/icons/dictionary.svg">
                                         <span>المصطلحات</span>
@@ -251,21 +251,21 @@
                                     <h6 class="fw-bold px-3 mb-2 text-primary">الشفافية والحوكمة</h6>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/reports.html"
+                                        href="//deployment/reports.html"
                                     >
                                         <img src="images/icons/chart.svg">
                                         <span>التقارير السنوية</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/privacy.html"
+                                        href="//deployment/privacy.html"
                                     >
                                         <img src="images/icons/policy.svg">
                                         <span>سياسة الخصوصية</span>
                                     </a>
                                     <a
                                         class="dropdown-item d-flex gap-3 align-items-center"
-                                        href="/freedom.html"
+                                        href="//deployment/freedom.html"
                                     >
                                         <img src="images/icons/freedom.svg">
                                         <span>حرية الحصول على المعلومات</span>
@@ -278,37 +278,37 @@
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/news.html"
+                        href="//deployment/news.html"
                     >الأخبار والأحداث</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/services.html"
+                        href="//deployment/services.html"
                     >الخدمات</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/support.html"
+                        href="//deployment/support.html"
                     >المساعدة والدعم</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/contact-us.html"
+                        href="//deployment/contact-us.html"
                     >تواصل معنا</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/faq.html"
+                        href="//deployment/faq.html"
                     >الأسئلة الشائعة</a>
                 </li>
                 <li class="nav-item">
                     <a
                         class="nav-link"
-                        href="/site-map.html"
+                        href="//deployment/site-map.html"
                     >خريطة الموقع</a>
                 </li>
             </ul>
@@ -318,7 +318,7 @@
                 <a
                     class="btn border-0"
                     role="button"
-                    href="/map.html"
+                    href="//deployment/map.html"
                 >
                     <img src="images/icons/search.svg">
                 </a>
@@ -400,7 +400,7 @@
                 <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/index.html"
+                    href="//deployment/index.html"
                 >الرئيسية</a>
             </li>
 
@@ -408,7 +408,7 @@
             <li class="nav-item dropdown">
                 <a
                     class="nav-link d-flex justify-content-between align-items-center"
-                    href="/about.html"
+                    href="//deployment/about.html"
                     id="mobileDropdown"
                     role="button"
                     data-bs-toggle="dropdown"
@@ -426,7 +426,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/about.html"
+                            href="//deployment/about.html"
                         >
                             <img
                                 src="images/icons/check.svg"
@@ -436,7 +436,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/structure.html"
+                            href="//deployment/structure.html"
                         >
                             <img
                                 src="images/icons/stucture.svg"
@@ -453,7 +453,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/owners-and-individuals.html"
+                            href="//deployment/owners-and-individuals.html"
                         >
                             <img
                                 src="images/icons/bussiness.svg"
@@ -463,7 +463,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/gov.html"
+                            href="//deployment/gov.html"
                         >
                             <img
                                 src="images/icons/gov.svg"
@@ -480,7 +480,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/rules-and-regulations.html"
+                            href="//deployment/rules-and-regulations.html"
                         >
                             <img
                                 src="images/icons/ins.svg"
@@ -490,7 +490,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/terminology.html"
+                            href="//deployment/terminology.html"
                         >
                             <img
                                 src="images/icons/dictionary.svg"
@@ -507,7 +507,7 @@
                     </li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/reports.html"
+                            href="//deployment/reports.html"
                         >
                             <img
                                 src="images/icons/chart.svg"
@@ -517,7 +517,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/privacy.html"
+                            href="//deployment/privacy.html"
                         >
                             <img
                                 src="images/icons/policy.svg"
@@ -527,7 +527,7 @@
                         </a></li>
                     <li><a
                             class="dropdown-item d-flex gap-3 align-items-center"
-                            href="/freedom.html"
+                            href="//deployment/freedom.html"
                         >
                             <img
                                 src="images/icons/freedom.svg"
@@ -541,37 +541,37 @@
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/news.html"
+                    href="//deployment/news.html"
                 >الأخبار والأحداث</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/services.html"
+                    href="//deployment/services.html"
                 >الخدمات</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/support.html"
+                    href="//deployment/support.html"
                 >المساعدة والدعم</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/contact-us.html"
+                    href="//deployment/contact-us.html"
                 >تواصل معنا</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/faq.html"
+                    href="//deployment/faq.html"
                 >الأسئلة الشائعة</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link"
-                    href="/site-map.html"
+                    href="//deployment/site-map.html"
                 >خريطة الموقع</a>
             </li>
 
@@ -633,11 +633,11 @@
                         <ol class="breadcrumb d-flex">
 
                             <li class="breadcrumb-item">
-                                <a href="/services.html">الخدمات</a>
+                                <a href="//deployment/services.html">الخدمات</a>
                             </li>
 
                             <li class="breadcrumb-item">
-                                <a href="/service-details.html">تفاصيل الخدمة</a>
+                                <a href="//deployment/service-details.html">تفاصيل الخدمة</a>
                             </li>
 
 
@@ -1951,7 +1951,7 @@
 
                     <a
                         class="btn btn-primary "
-                        href="/contact-us.html"
+                        href="//deployment/contact-us.html"
                         role="button"
                     > تواصل معنا</a>
                 </div>
@@ -2162,32 +2162,32 @@
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
                             aria-current="page"
-                            href="/about.html"
+                            href="//deployment/about.html"
                         >نبذة عن المركز</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/news.html"
+                            href="//deployment/news.html"
                         >الأخبار والأحداث</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/service.html"
+                            href="//deployment/service.html"
                         >الخدمات</a>
                     </li>
 
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/terminology.html"
+                            href="//deployment/terminology.html"
                         >المصطلحات</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/site-map.html"
+                            href="//deployment/site-map.html"
                         >خريطة الموقع</a>
                     </li>
 
@@ -2207,13 +2207,13 @@
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/support.html"
+                            href="//deployment/support.html"
                         >بلاغ عن فساد</a>
                     </li>
                     <li class="nav-item">
                         <a
                             class="nav-link text-default text-primary-hover fw-400"
-                            href="/contact-us.html"
+                            href="//deployment/contact-us.html"
                         >تواصل معنا</a>
                     </li>
                 </ul>
@@ -2356,20 +2356,20 @@
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/terms.html"
+                    href="//deployment/terms.html"
                 >الشروط والأحكام</a>
             </li>
 
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/privacy.html"
+                    href="//deployment/privacy.html"
                 >سياسة الخصوصية</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link text-default text-primary-hover fw-400 text-decoration-underline"
-                    href="/freedom.html"
+                    href="//deployment/freedom.html"
                 >حرية الحصول على المعلومات</a>
             </li>
         </ul>
